--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,9 @@
 body{
+    color : yellow;
     background-color: red;
     background-image : url("../img/Rookie.jpg");
+}
+
+div{
+    color : red;
 }
